# face_recognition_app

./: Dockerfile  app.py  pyproject.toml  render.yaml  requirements.txt
static/: script.js
templates/: index.html
