[tool.poetry]
name = "face-recognition-app"
version = "0.1.0"
description = "Face recognition-based attendance system"
authors = ["Jaydeep Dalvadi <jaydeep@heliocentrix.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "^2.2.0"
face-recognition = "^1.3.0"
opencv-python = "^4.8.0.76"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
