[tool.poetry]
name = "face_recognition_app"
version = "0.1.0"
description = "Face recognition-based attendance system"
authors = ["Jaydeep Dalvadi <jaydeep@heliocentrix.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3"
face-recognition = "^1.3"
opencv-python = "^4.8"
gunicorn = "^21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
